--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,113 +39,4 @@ jobs:
           node-version: '18'
           cache: 'npm'
       
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run ESLint
-        run: npm run lint
-      
-      - name: Run TypeScript check
-        run: npx tsc --noEmit
-
-  build:
-    name: Build Application
-    runs-on: ubuntu-latest
-    needs: [design-lock, lint-and-typecheck]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Build application
-        run: npm run build
-        env:
-          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL || 'https://placeholder.supabase.co' }}
-          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY || 'placeholder-key' }}
-      
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist/
-          retention-days: 1
-
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    needs: design-lock
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run unit tests
-        run: npm run test 2>/dev/null || echo "No tests configured yet"
-      
-      # TODO: Add E2E tests when implemented
-      # - name: Run E2E tests
-      #   run: npm run test:e2e
-
-  security-audit:
-    name: Security Audit
-    runs-on: ubuntu-latest
-    needs: design-lock
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run security audit
-        run: npm audit --audit-level=moderate
-        continue-on-error: true
-      
-      - name: Check for security vulnerabilities in dependencies
-        run: npx better-npm-audit audit --level moderate
-        continue-on-error: true
-
-  deploy-preview:
-    name: Deploy Preview
-    runs-on: ubuntu-latest
-    needs: [build, test]
-    if: github.event_name == 'pull_request'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: dist
-          path: dist/
-      
-      - name: Deploy to Netlify (Preview)
-        uses: netlify/actions/cli@master
-        with:
-          args: deploy --dir=dist --message="Preview deploy for PR #${{ github.event.number }}"
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      - name: Install
