--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:modular": "vitest run src/test/modular-production-e2e.test.ts",
-    "test:e2e": "scripts/run-enhanced-e2e-tests.sh",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "test:e2e:modular": "scripts/run-enhanced-e2e-tests.sh --modular",
     "test:e2e:quick": "scripts/run-enhanced-e2e-tests.sh --quick"
   },
@@ -79,6 +80,7 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@netlify/functions": "^4.2.5",
+    "@playwright/test": "^1.55.0",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -94,6 +96,7 @@
     "jsdom": "^26.1.0",
     "lovable-tagger": "^1.1.9",
     "postcss": "^8.5.6",
+    "supabase": "^2.39.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
